--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -6,32 +6,56 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            
+            /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* shorthand - background
+            color > image > position > repeat > [size] > attachment            
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 2px solid darkslategray;
             border-radius: 4px;
         }
+
+        p{
+            text-align: justify;
+        }
+
     </style>
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
 </head>
 <body>
     <main>
         <h1>Teste de Fundos</h1>
-
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis optio dolore corrupti assumenda nostrum quidem, obcaecati ea iste. Assumenda provident error sint culpa esse doloribus quam sed quaerat ducimus eligendi.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur nesciunt harum asperiores tempora? Possimus illo vero voluptate? Placeat perferendis quibusdam commodi ab magnam vitae molestiae asperiores nemo incidunt fugiat!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat cumque quod eligendi id architecto maxime saepe. Quasi repellendus, accusamus aspernatur corporis laudantium eaque reiciendis voluptas reprehenderit sunt voluptatibus aut?
+             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis optio dolore corrupti assumenda nostrum quidem, obcaecati ea iste. Assumenda provident error sint culpa esse doloribus quam sed quaerat ducimus eligendi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur nesciunt harum asperiores tempora? Possimus illo vero voluptate? Placeat perferendis quibusdam commodi ab magnam vitae molestiae asperiores nemo incidunt fugiat!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat cumque quod eligendi id architecto maxime saepe. Quasi repellendus, accusamus aspernatur corporis laudantium eaque reiciendis voluptas reprehenderit sunt voluptatibus aut?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis optio dolore corrupti assumenda nostrum quidem, obcaecati ea iste. Assumenda provident error sint culpa esse doloribus quam sed quaerat ducimus eligendi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur nesciunt harum asperiores tempora? Possimus illo vero voluptate? Placeat perferendis quibusdam commodi ab magnam vitae molestiae asperiores nemo incidunt fugiat!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat cumque quod eligendi id architecto maxime saepe. Quasi repellendus, accusamus aspernatur corporis laudantium eaque reiciendis voluptas reprehenderit sunt voluptatibus aut?
+                </p>
+                <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis optio dolore corrupti assumenda nostrum quidem, obcaecati ea iste. Assumenda provident error sint culpa esse doloribus quam sed quaerat ducimus eligendi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur nesciunt harum asperiores tempora? Possimus illo vero voluptate? Placeat perferendis quibusdam commodi ab magnam vitae molestiae asperiores nemo incidunt fugiat!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat cumque quod eligendi id architecto maxime saepe. Quasi repellendus, accusamus aspernatur corporis laudantium eaque reiciendis voluptas reprehenderit sunt voluptatibus aut?
+                </p>
     </main>
     
 </body>
