exercicios de iframe

--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -30,7 +30,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestiae nesciunt porro cupiditate. Hic vitae harum, sit optio maiores nobis totam placeat necessitatibus neque dolores molestias beatae delectus. Itaque, et.
     </p>
 
-    <iframe src="" id="tela" name="pag">
+    <iframe 
+    srcdoc="<h1> Escolha uma das opções acima</h1> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente esse porro aliquam inventore nobis iure error laudantium aperiam magni, quod atque corporis ut non voluptate, quasi sed temporibus! Placeat, at!</p>
+    <img src='imagens/img.png'>"
+    
+    id="tela" name="pag">
         <p>Infelizmente seu navegador não é compátivel</p>
     </iframe>
     <p>
