--- a/Desafios/d013/sub-pages/facebook.html
+++ b/Desafios/d013/sub-pages/facebook.html
@@ -5,20 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
 </head>
-<style>
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
-
-    body{
-        width: 100vw;
-        height: 100vh;
-        background: black url(../imagens/tela-facebook.jpg) no-repeat top center;
-        background-size: cover;
-    }
-</style>
+<link rel="stylesheet" href="../estilo/social.css">
 <body>
-    
+    <img src="../imagens/tela-facebook.jpg" alt="YouTube">
+    <a href="https://www.facebook.com" target="_blank">Acesse</a>
 </body>
 </html>
