--- a/Desafios/d013/sub-pages/github.html
+++ b/Desafios/d013/sub-pages/github.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
+    <link rel="stylesheet" href="../estilo/social.css">
 </head>
-<style>
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
-
-    body{
-        width: 100vw;
-        height: 100vh;
-        background: black url(../imagens/tela-github.jpg) no-repeat top center;
-        background-size: cover;
-    }
-</style>
 <body>
-    
+    <img src="../imagens/tela-github.jpg" alt="YouTube">
+    <a href="https://www.gustavoguanabara.github.io" target="_blank">Acesse</a>
 </body>
 </html>
