--- a/Desafios/d013/sub-pages/instagram.html
+++ b/Desafios/d013/sub-pages/instagram.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
+    <link rel="stylesheet" href="../estilo/social.css">
 </head>
-<style>
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
 
-    body{
-        width: 100vw;
-        height: 100vh;
-        background: black url(../imagens/tela-instagram.jpg) no-repeat top center;
-        background-size: cover;
-    }
 </style>
 <body>
-    
+    <img src="../imagens/tela-instagram.jpg" alt="YouTube">
+    <a href="https://www.instagram.com" target="_blank">Acesse</a>
 </body>
 </html>
