--- a/Desafios/d013/sub-pages/youtube.html
+++ b/Desafios/d013/sub-pages/youtube.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
+    <link rel="stylesheet" href="../estilo/social.css">
 </head>
-<style>
-    *{
-        margin: 0px;
-        padding: 0px;
-    }
-
-    body{
-        width: 100vw;
-        height: 100vh;
-        background: black url(../imagens/tela-youtube.png) no-repeat top center;
-        background-size: cover;
-    }
 </style>
 <body>
-    
+    <img src="../imagens/tela-youtube.png" alt="YouTube">
+    <a href="https://www.youtube.com/user/cursoemvideo/playlists" target="_blank">Acesse</a>
 </body>
 </html>
