--- a/Exercicios/ex027/flex006/index.html
+++ b/Exercicios/ex027/flex006/index.html
@@ -6,15 +6,19 @@
     <title>FlexBox</title>
     <style>
         div.conteiner{
-            background-color: yellow;
+            background-color:yellow;
+            height: 400px;
             display: flex;
+            flex-flow: row wrap;
+            align-content: space-between;
+            
         }
 
         div.item{
             background-color: lightblue;
             border: 1px solid black;
-            flex: auto;
             text-align: center;
+            padding: 40px;
         }
     </style>
 </head>
@@ -26,7 +30,13 @@
         <div class="item">D</div>
         <div class="item">E</div>
         <div class="item">F</div>
-        <div class="item">G</div>   
+        <div class="item">G</div> 
+        <div class="item">H</div> 
+        <div class="item">I</div> 
+        <div class="item">J</div> 
+        <div class="item">K</div> 
+        <div class="item">L</div> 
+        <div class="item">M</div>   
     </div>
 </body>
 </html>
